# GMockExamples

./: CMakeLists.txt  README.md  main.cpp
car/: CMakeLists.txt
car/api/: car.h
car/src/: car.cpp
car/test/: CMakeLists.txt  car_test.cpp
radio/: CMakeLists.txt
radio/api/: radio.h
radio/mock/: CMakeLists.txt  mock_radio.cpp  mock_radio.h
radio/src/: radio.cpp
